app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
@import 'bootstrap';
@import 'select2/dist/css/select2';
@import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
@import 'fullcalendar/dist/fullcalendar';
@import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
@import 'devise';
@import 'devices';
@import 'schedules';

.select2-container--default .select2-selection--single {
  border: 1px solid #ccc;
  height: 34px;
  .select2-selection__rendered {
    height: 100%;
    .select2-selection__placeholder {
      line-height: 32px;
    }
  }
  .select2-selection__arrow {
    height: 100%;
  }
}

/* hot fix for datepicker not displayed */
.datepicker div.datepicker-days {
  display: block;
}

/* Override Bootstrap 3 font locations (tasloum) */
@font-face {
  font-family: 'Glyphicons Halflings';
  src: asset-url('bootstrap/fonts/glyphicons-halflings-regular.eot');
  src: asset-url('bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
  asset-url('bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'),
  asset-url('bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
  asset-url('bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
}

/* Override x-editable urls */
.editableform-loading {
  background: asset-url("x-editable/dist/bootstrap3-editable/img/loading.gif") center center no-repeat;
}

.editable-clear-x {
  background: asset-url("x-editable/dist/bootstrap3-editable/img/clear.png") center center no-repeat;
}

/* mixins, variables, etc. */
$gray: #eaea88;
$gray-darker: #eaeaff;
$gray-light: #eaeaef;
$gray-medium-light: #eaeaea;

@mixin box_sizing {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

/* Responsive tables */
@media screen and (max-width: 991px) {
  .responsive-table-container {

    .responsive-table .responsive-table-element-field.form-row .row {
      .col-md-1, .col-md-2, .col-md-5, .col-md-6 {
        display: flex;
        align-items: center;
        &:before {
          width: 30%;
          text-align: left;
        }
        .form-group {
          flex: 1;
          margin: 15px;
        }
      }
    }

    &.panel-default {
      border: none;
    }
    .responsive-table {
      padding: 0 15px;
      .responsive-table-header {
        display: none;
      }
      .row {
        margin-bottom: 10px;
        display: block;
        border: 1px solid #ddd;
        .col-md-1, .col-md-2, .col-md-5, .col-md-6 {
          display: block;
          text-align: right;
          font-size: 13px;
          border-bottom: 1px dotted #ccc;
          min-height: 43px;

          &:before {
            content: attr(data-label);
            float: left;
            font-weight: bold;
            font-size: 150%;
          }
          &:last-child {
            border-bottom: 0;
          }
          .responsive-table-element {
            font-size: 150%;
            margin: 15px 0 0;
          }
        }
      }
    }
  }
}

/* universal */
body {
  padding-top: 60px;
}

section {
  overflow: auto;
}

textarea {
  resize: vertical;
}

.center {
  text-align: center;
  h1 {
    margin-bottom: 10px;
  }
}

.hidden {
  display: none;
}

/* typography */
h1, h2, h3, h4, h5, h6 {
  line-height: 1;
}

h1 {
  font-size: 3em;
  letter-spacing: -2px;
  margin-bottom: 30px;
  text-align: center;
}

h2 {
  font-size: 1.2em;
  letter-spacing: -1px;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: $gray-light;
}

p {
  font-size: 1.1em;
  line-height: 1.7em;
}

/* footer */
footer {
  margin-top: 45px;
  padding-top: 5px;
  border-top: 1px solid $gray-medium-light;
  color: $gray-light;
  a {
    color: $gray;
    &:hover {
      color: $gray-darker;
    }
  }
  small {
    float: left;
  }
  ul {
    float: right;
    list-style: none;
    li {
      float: left;
      margin-left: 15px;
    }
  }
}

/* editable */
span.editable {
  cursor: pointer;
}

/* miscellaneous */
.debug_dump {
  clear: both;
  float: left;
  width: 100%;
  margin-top: 45px;
  @include box_sizing;
}

